--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "mongoose-encryption": "^2.1.2"
   },
   "name": "secrets",
   "version": "1.0.0",
   "description": "A simple web app for authentication",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
